# machwave-api

./: .env.example  .gitignore  Dockerfile  Dockerfile.worker  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: config.py  main.py
app/auth/: firebase.py  rbac.py  teams.py
app/credits/: estimator.py
app/middleware/: request_logging.py
app/repositories/: account.py  base.py  cost.py  motor.py  simulation.py  team.py  team_resources.py
app/routers/: __init__.py  motors.py  propellants.py  simulations.py  team_motors.py  team_simulations.py  teams.py  usage.py  users.py
app/schemas/: __init__.py  credits.py  motor.py  simulation.py  team.py
app/storage/: gcs.py
app/worker/: dispatch.py  run.py  server.py
deploy/dev/: job.yaml  service.yaml
deploy/prod/: config.yaml  job.yaml  service.yaml  worker-service.yaml
scripts/: deploy.sh  init-pubsub-emulator.sh  set_user_role.py
tests/: conftest.py  test_admin_endpoints.py  test_config.py  test_main.py  test_round_trip.py
tests/auth/: test_firebase.py  test_rbac.py  test_teams.py
tests/middleware/: test_request_logging.py
tests/repositories/: conftest.py  test_base.py  test_motor.py  test_simulation.py  test_team.py
tests/routers/: conftest.py  test_motors.py  test_propellants.py  test_simulations.py  test_team_invites.py  test_team_motors.py  test_team_simulations.py  test_teams.py  test_usage.py  test_users.py
tests/schemas/: test_motor.py  test_simulation.py  test_team.py
tests/storage/: test_gcs.py
tests/worker/: test_dispatch.py  (+3 more)
